--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
  - go get ${TOOLS_CMD}/cover
  - go get github.com/modocache/gover
  - go get github.com/mattn/goveralls
+ - go get github.com/golang/lint/golint
 
 script:
  - ./test
