--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ env:
 matrix:
   fast_finish: true
 
+before_install:
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq libpcap-dev
+
 install:
  - go get ${TOOLS_CMD}/cover
  - go get github.com/modocache/gover
