--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: go
+arch:
+  - amd64
+  - ppc64le
 dist: bionic
 
 go:
@@ -25,7 +28,9 @@ install:
 script:
  - >
     if [ "${TARGET}" == "amd64" ]; then
-      GOARCH="${TARGET}" ./test.sh;
+      if [ "${TRAVIS_CPU_ARCH}" != "ppc64le" ]; then
+         GOARCH="${TARGET}" ./test.sh;
+      fi
     else
       GOARCH="${TARGET}" go list ./... | xargs -n1 go build -v -o /dev/null
     fi
