--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ env:
 matrix:
   fast_finish: true
   include:
-    - os: windows
+    - os: linux
       env: TARGET=amd64
       go: 1.13.x
-    - os: windows
+    - os: linux
       env: TARGET=amd64
       go: 1.14.x
     - os: linux
