Define Makefile with golangci-lint
As govet and gofmt are now handled by golangci-lint, there is no need to apply them here.

Install golangci-lint

Signed-off-by: Matthieu MOREL <matthieu.morel35@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,6 +21,9 @@ jobs:
         with:
           format: auto
       - uses: golangci/golangci-lint-action@v3
+        with:
+          args: --verbose
+          version: v1.51.2
   build:
     name: Build all linux architectures
     needs: lint
