--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ name: test
 on: ["push", "pull_request"]
 
 env:
-  GO_VERSION: "1.19"
+  GO_VERSION: "1.22"
   LINUX_ARCHES: "amd64 386 arm arm64 s390x mips64le ppc64le"
 
 jobs:
@@ -20,10 +20,10 @@ jobs:
       - uses: ibiqlik/action-yamllint@v3
         with:
           format: auto
-      - uses: golangci/golangci-lint-action@v3
+      - uses: golangci/golangci-lint-action@v4
         with:
           args: --verbose
-          version: v1.51.2
+          version: v1.54
   build:
     name: Build all linux architectures
     needs: lint
@@ -55,11 +55,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install test binaries
-        env:
-          GO111MODULE: off
         run: |
-          go get github.com/mattn/goveralls
-          go get github.com/modocache/gover
+          go install github.com/mattn/goveralls@v0.0.12
+          go install github.com/modocache/gover@latest
 
       - name: test
         run: COVERALLS=1 ./test.sh
