--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,30 +1,40 @@
+version: "2"
 linters:
   enable:
     - contextcheck
-    - errcheck
     - errorlint
-    - gci
     - ginkgolinter
     - gocritic
-    - gofumpt
-    - govet
-    - ineffassign
     - misspell
     - nolintlint
     - nonamedreturns
     - predeclared
-    - staticcheck
-    - typecheck
     - unconvert
-    - unused
     - whitespace
-
-linters-settings:
-  gci:
-    sections:
-      - standard
-      - default
-      - prefix(github.com/containernetworking)
-
-run:
-  timeout: 5m
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gci
+    - gofumpt
+  settings:
+    gci:
+      sections:
+        - standard
+        - default
+        - prefix(github.com/containernetworking)
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
