fix: missing-user-entrypoint-7

--- a/.github/actions/retest-action/Dockerfile
+++ b/.github/actions/retest-action/Dockerfile
@@ -2,6 +2,10 @@ FROM alpine:3.20
 
 RUN apk add --no-cache curl jq
 
+RUN adduser -D -s /bin/sh appuser
+
 COPY entrypoint.sh /entrypoint.sh
+
+USER appuser
 
 ENTRYPOINT ["/entrypoint.sh"]
